--- a/ShareTripSDK/Classes/STCoreKit/Views/DiscountViews/DiscountOptionsCell.xib
+++ b/ShareTripSDK/Classes/STCoreKit/Views/DiscountViews/DiscountOptionsCell.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19455" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19454"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -11,18 +11,18 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="120" id="KGk-i7-Jjw" customClass="DiscountOptionsCell" customModule="ShareTrip" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="372" height="120"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="75" id="KGk-i7-Jjw" customClass="DiscountOptionsCell" customModule="ShareTripSDK" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="385" height="75"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="372" height="120"/>
+                <rect key="frame" x="0.0" y="0.0" width="385" height="75"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JUk-dB-h8D">
-                        <rect key="frame" x="8" y="8" width="356" height="106"/>
+                        <rect key="frame" x="8" y="8" width="369" height="61"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="au0-x2-MVq" userLabel="Header">
-                                <rect key="frame" x="0.0" y="0.0" width="356" height="56"/>
+                                <rect key="frame" x="0.0" y="0.0" width="369" height="56"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="discount-mono" translatesAutoresizingMaskIntoConstraints="NO" id="gQu-Bo-KFL">
                                         <rect key="frame" x="16" y="16" width="36" height="36"/>
@@ -33,13 +33,13 @@
                                         </constraints>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Select Discount Option" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VqV-OQ-S7o">
-                                        <rect key="frame" x="64" y="16" width="276" height="19.5"/>
+                                        <rect key="frame" x="64" y="16" width="289" height="19.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Choose your preferred discount option" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="COF-lw-09A">
-                                        <rect key="frame" x="64" y="37.5" width="276" height="12"/>
+                                        <rect key="frame" x="64" y="37.5" width="289" height="12"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="10"/>
                                         <color key="textColor" red="0.29803921570000003" green="0.29803921570000003" blue="0.29803921570000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
@@ -59,7 +59,7 @@
                                 </constraints>
                             </view>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="D8i-p2-26o">
-                                <rect key="frame" x="0.0" y="56" width="356" height="50"/>
+                                <rect key="frame" x="0.0" y="56" width="369" height="5"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </stackView>
                         </subviews>
@@ -91,10 +91,11 @@
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <connections>
+                <outlet property="discountImageView" destination="gQu-Bo-KFL" id="fi3-HJ-nEV"/>
                 <outlet property="discountOptionsHolder" destination="D8i-p2-26o" id="9MR-fo-dWG"/>
                 <outlet property="subContainerView" destination="JUk-dB-h8D" id="yBH-Qx-dbT"/>
             </connections>
-            <point key="canvasLocation" x="-81.159420289855078" y="69.642857142857139"/>
+            <point key="canvasLocation" x="-71.739130434782609" y="54.575892857142854"/>
         </tableViewCell>
     </objects>
     <resources>
