--- a/ShareTripSDK/Classes/STCoreKit/Views/PaymentGateways/PaymentGatewaysView.xib
+++ b/ShareTripSDK/Classes/STCoreKit/Views/PaymentGateways/PaymentGatewaysView.xib
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097.3" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina5_5" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="FfW-WB-hm9" customClass="PaymentGatewaysView" customModule="ShareTrip" customModuleProvider="target">
+        <view contentMode="scaleToFill" id="FfW-WB-hm9" customClass="PaymentGatewaysView" customModule="ShareTripSDK" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="358" height="352"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
@@ -43,7 +44,7 @@
                             </subviews>
                         </stackView>
                     </subviews>
-                    <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     <constraints>
                         <constraint firstItem="3LV-Xe-y4F" firstAttribute="centerY" secondItem="Ymd-Av-2yt" secondAttribute="centerY" id="JJT-zc-yY3"/>
                         <constraint firstAttribute="bottom" secondItem="vVn-ha-aq8" secondAttribute="bottom" constant="10" id="MIp-ui-PWe"/>
@@ -72,7 +73,7 @@
                         </collectionView>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="C05-CU-9o5">
                             <rect key="frame" x="0.0" y="150" width="342" height="35"/>
-                            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="35" id="3LV-RO-iUO"/>
                             </constraints>
@@ -94,7 +95,7 @@
                                         <constraint firstAttribute="width" constant="24" id="d1U-JM-dtZ"/>
                                     </constraints>
                                 </imageView>
-                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Select Card Prefix" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="YHx-q0-2CV" customClass="NoSelectTextField" customModule="ShareTrip" customModuleProvider="target">
+                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Select Card Prefix" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="YHx-q0-2CV" customClass="NoSelectTextField" customModule="ShareTripSDK" customModuleProvider="target">
                                     <rect key="frame" x="56" y="38" width="282" height="40"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="40" id="sCf-ZA-iAi"/>
@@ -130,7 +131,8 @@
                     </subviews>
                 </stackView>
             </subviews>
-            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+            <viewLayoutGuide key="safeArea" id="sw9-yL-hjo"/>
+            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
                 <constraint firstItem="Ymd-Av-2yt" firstAttribute="leading" secondItem="FfW-WB-hm9" secondAttribute="leading" id="Ert-iM-iY7"/>
                 <constraint firstItem="Ymd-Av-2yt" firstAttribute="top" secondItem="FfW-WB-hm9" secondAttribute="top" id="Ow6-Fh-cJF"/>
@@ -141,19 +143,20 @@
                 <constraint firstItem="sw9-yL-hjo" firstAttribute="bottom" secondItem="m2s-cu-49x" secondAttribute="bottom" id="zsL-H3-7HA"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <viewLayoutGuide key="safeArea" id="sw9-yL-hjo"/>
             <userDefinedRuntimeAttributes>
                 <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                     <integer key="value" value="4"/>
                 </userDefinedRuntimeAttribute>
             </userDefinedRuntimeAttributes>
             <connections>
+                <outlet property="cardImageView" destination="ZD5-W8-FjZ" id="WO6-lN-Ce2"/>
                 <outlet property="cardPrefixTextField" destination="YHx-q0-2CV" id="t1k-3u-2dH"/>
                 <outlet property="cardPrefixView" destination="UR0-xY-r71" id="bYf-hD-kVO"/>
                 <outlet property="collectionViewHeightLC" destination="VzZ-o0-y4G" id="Svg-yA-nKc"/>
                 <outlet property="pageControllView" destination="C05-CU-9o5" id="w6f-CX-AMV"/>
                 <outlet property="pageControllViewHLC" destination="3LV-RO-iUO" id="hmM-H8-wu9"/>
                 <outlet property="paymentGatewayCollectionView" destination="xcm-nJ-fx3" id="1Ma-VF-0KP"/>
+                <outlet property="paymentImageView" destination="3LV-Xe-y4F" id="r1p-IC-nnm"/>
             </connections>
             <point key="canvasLocation" x="-1649" y="60"/>
         </view>
@@ -161,5 +164,8 @@
     <resources>
         <image name="card-mono" width="24" height="24"/>
         <image name="payment-mono" width="36" height="36"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
     </resources>
 </document>
