--- a/ShareTripSDK/Classes/STFlightKit/Views/Details/TVCell/FlightLegCardCell.xib
+++ b/ShareTripSDK/Classes/STFlightKit/Views/Details/TVCell/FlightLegCardCell.xib
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16086"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="182" id="KGk-i7-Jjw" customClass="FlightLegCardCell" customModule="ShareTrip" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="182" id="KGk-i7-Jjw" customClass="FlightLegCardCell" customModule="ShareTripSDK" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="340" height="182"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -20,7 +20,7 @@
                     <view contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qR0-CO-ET3">
                         <rect key="frame" x="8" y="8" width="324" height="174"/>
                         <subviews>
-                            <view contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dRm-he-rGJ" customClass="FlightLegView" customModule="ShareTrip" customModuleProvider="target">
+                            <view contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dRm-he-rGJ" customClass="FlightLegView" customModule="ShareTripSDK" customModuleProvider="target">
                                 <rect key="frame" x="16" y="0.0" width="292" height="70"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="fav-logo-mono" translatesAutoresizingMaskIntoConstraints="NO" id="2e1-a7-GDg">
@@ -31,7 +31,7 @@
                                         </constraints>
                                     </imageView>
                                     <view contentMode="scaleToFill" horizontalCompressionResistancePriority="1000" translatesAutoresizingMaskIntoConstraints="NO" id="O2b-za-BCj">
-                                        <rect key="frame" x="48" y="16" width="184" height="20"/>
+                                        <rect key="frame" x="48" y="16" width="183.5" height="20"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="19:40" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="t6V-d7-SUs">
                                                 <rect key="frame" x="0.0" y="0.0" width="40" height="20"/>
@@ -67,13 +67,13 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="+1" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hu4-fu-xRu">
-                                                <rect key="frame" x="144" y="0.0" width="12" height="12"/>
+                                                <rect key="frame" x="144" y="0.0" width="11.5" height="12"/>
                                                 <fontDescription key="fontDescription" type="system" weight="medium" pointSize="10"/>
                                                 <color key="textColor" red="1" green="0.35294117650000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="JFK" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xIj-BZ-EG4">
-                                                <rect key="frame" x="160" y="1.5" width="24" height="17"/>
+                                                <rect key="frame" x="159.5" y="1.5" width="24" height="17"/>
                                                 <fontDescription key="fontDescription" type="system" weight="light" pointSize="14"/>
                                                 <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <nil key="highlightedColor"/>
@@ -244,12 +244,13 @@
                     <constraint firstItem="qR0-CO-ET3" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="tVK-oA-VpQ"/>
                 </constraints>
             </tableViewCellContentView>
-            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <connections>
                 <outlet property="airlineImageView" destination="2e1-a7-GDg" id="8Ma-33-VE1"/>
                 <outlet property="airlineLabel" destination="nLv-GC-UGs" id="rTe-h1-ZTA"/>
                 <outlet property="arrivalTimeLabel" destination="hOa-aH-Z6k" id="TAW-Ha-M5F"/>
+                <outlet property="arrowRightImageView" destination="4Mw-BI-6Ju" id="bTY-2m-3ix"/>
                 <outlet property="containedView" destination="qR0-CO-ET3" id="yPg-Uh-4fL"/>
                 <outlet property="dayCountLabel" destination="Hu4-fu-xRu" id="m7g-VN-ckp"/>
                 <outlet property="departureDateLabel" destination="44Q-jS-iis" id="GmN-bd-E2N"/>
@@ -258,6 +259,7 @@
                 <outlet property="durationLabel" destination="XOM-lX-P68" id="FOr-K6-Nrd"/>
                 <outlet property="hiddenStoppageView" destination="mqu-Ta-NBB" id="AeH-Ut-t0q"/>
                 <outlet property="originNameLabel" destination="TxI-KX-U5n" id="hfT-ei-38p"/>
+                <outlet property="seeDetailsLabel" destination="Nlc-cX-KEu" id="iZl-6I-TxO"/>
                 <outlet property="stoppageLabel" destination="DKO-4X-ZsB" id="0dA-fC-bxh"/>
             </connections>
             <point key="canvasLocation" x="155.07246376811597" y="199.55357142857142"/>
