--- a/ShareTripSDK/Classes/STFlightKit/Views/Search/TVCell/FlightCell.xib
+++ b/ShareTripSDK/Classes/STFlightKit/Views/Search/TVCell/FlightCell.xib
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="223" id="KGk-i7-Jjw" customClass="FlightCell" customModule="ShareTrip" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="223" id="KGk-i7-Jjw" customClass="FlightCell" customModule="ShareTripSDK" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="375" height="223"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -287,9 +287,11 @@
                 <outlet property="flightLegStackView" destination="ZwZ-ez-gW1" id="saJ-Ui-XNE"/>
                 <outlet property="placeholderContainer" destination="ytl-59-STR" id="Vrp-im-EoL"/>
                 <outlet property="placeholderStackView" destination="R6L-qC-TTN" id="ifD-qz-rCk"/>
+                <outlet property="refundableImageView" destination="Utv-5u-hKo" id="Aem-os-9n6"/>
                 <outlet property="refundableStatusLabel" destination="jea-9E-5tv" id="AFW-Ps-xBk"/>
                 <outlet property="technicalStoppageView" destination="pwt-iC-WZ4" id="PCH-sq-IMh"/>
                 <outlet property="totalPriceLabel" destination="GHj-Xc-Woo" id="7Da-2h-4hz"/>
+                <outlet property="tripCoinColorImageView" destination="oaB-MM-1bj" id="Yol-4K-4zA"/>
             </connections>
             <point key="canvasLocation" x="-154.34782608695653" y="196.54017857142856"/>
         </tableViewCell>
